# confidence

./: Cargo.toml  LICENSE  README.md
.circleci/: config.yml
src/: confidence.rs  percent.rs  results.rs
