[package]
name = "oxt-confidence"
version = "0.2.2"
authors = ["stephen-cameron <git@oxt.ca>"]
edition = "2021"
description = "Calculate the confidence of a number a certain amount of sequences away"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
rand = "0.8.5"
serde = { version = "1.0.199", features = ["derive"]}


[lib]
name = "oxt_confidence"
path = "src/confidence.rs"
